--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "helmet": "^6.2.0",
+    "lowdb": "^7.0.1",
     "moment": "^2.30.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
+    "@types/lowdb": "^1.0.15",
     "@types/morgan": "^1.9.10",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
