--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
     "@types/lowdb": "^1.0.15",
+    "@types/mocha": "^10.0.10",
     "@types/morgan": "^1.9.10",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.10.0",
+    "mocha": "^11.7.1",
     "prettier": "^2.8.8",
+    "supertest": "^7.1.3",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
@@ -31,6 +36,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsnd -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/server.ts",
-    "start": "node ./dist/server.js"
+    "start": "node ./dist/server.js",
+    "test": "mocha -r ts-node/register ./tests/app.test.ts"
   }
 }
