--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "typescript": "^5.8.3"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run copy-data-files",
     "dev": "tsnd -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/server.ts",
     "start": "node ./dist/server.js",
-    "test": "mocha -r ts-node/register ./tests/app.test.ts --exit"
+    "test": "mocha -r ts-node/register ./src/tests/app.test.ts --exit",
+    "copy-data-files": "cp -r ./src/data ./dist/"
   }
 }
