--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,19 +5,14 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "ES2024"
-    ],
+    "lib": ["ES6"],
     "module": "commonjs",
     "outDir": "./dist",
     "removeComments": true,
     "resolveJsonModule": true,
     "rootDir": "./src",
     "skipLibCheck": true,
-    "target": "es2024",
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/@types"
-    ]
+    "target": "es2016",
+    "typeRoots": ["./node_modules/@types", "./src/@types"]
   }
 }
